Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/overload/T5090220.out
T5090220.java:16:9: compiler.err.ref.ambiguous: foo, kindname.method, foo(int,java.lang.Integer), T5090220, kindname.method, foo(java.lang.Integer,double), T5090220
1 error
